# xml-parser-test

./: .gitignore  README.md  pyproject.toml
parser/: load.py  main.py  parse.py  types.py
tests/: test_load.py  test_parser.py  test_utils.py
tests/assets/: example.xml  example_malformed.xml  example_multiple_application_ref.xml  example_multiple_doc_numbers.xml  example_no_attributes.xml  example_unsorted.xml  example_weird_places.xml
xml_parser/: load.py  parse.py  types.py
