[project]
name = "xml_parser"
version = "0.1.0"
description = "Data Engineering Test Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-watcher>=0.4.3",
    "ruff>=0.14.4",
    "types-lxml>=2025.8.25",
]
